start adding programming examples

--- a/qof/README
+++ b/qof/README
@@ -38,4 +38,8 @@ still under some flux in order to flesh it out.  In particular, the
 subroutine naming convention is highly inconsistent.
 
 
+Examples:
+--------
+Example programs showing usage can be found in the "examples" subdirectory
+
 
