fix examples to correctly hang storage off of the books

--- a/qof/examples/README
+++ b/qof/examples/README
@@ -3,7 +3,7 @@
                         ------------
                         April 2004
 
-There are two examples in this directory, both showing how to use
+There are three examples in this directory, showing how to use
 QOF for queries.  One example shows how to use the raw, c-language
 query-construction programming interface, the other shows how to
 use an SQL-like language that is parsed and executed on the client 
@@ -16,4 +16,7 @@ SQL query parsing and execution.
 The "query-example" program provides an example of the usage of
 the low-level query-construction routines.
 
+
+The gobject subdirectory contains example code showing how to use 
+QOF to perform a query over GObjects.
 
