--- a/qof/ChangeLog
+++ b/qof/ChangeLog
@@ -1,6 +1,7 @@
 
 2004-05-01 Linas Vepstas <linas@linas.org>
 	* Add query to XML serialization
+	* Add doxygen automatic document generation
 
 2004-04-17 Linas Vepstas <linas@linas.org>
 	* Add SQL client support
