--- a/qof/backend/README
+++ b/qof/backend/README
@@ -3,6 +3,12 @@
                             ------------
 
 This directory contains code that implements storage backends for QOF.
-Although GnuCash has five sotrage backends, QOF only has one, 'dwi' and
-that backend is under development.
+Although GnuCash has five storage backends, QOF only has two, 'dwi' 
+and 'QSF'. Each backend is under development.
+
+For more information on DWI, see:
+http://dwi.sourceforge.net/
+
+For more information on QSF, see:
+http://code.neil.williamsleesmill.me.uk/qsf.html
 
