--- a/qof/ChangeLog
+++ b/qof/ChangeLog
@@ -1,3 +1,21 @@
+2005-08-12  Neil Williams <linux@codehelp.co.uk>
+
+	* backend/file/qsf-backend.c: Cast fixes
+	* backend/file/qsf-object.xsd.xml: QOF_TYPE_CHOICE attribute
+	* backend/file/qsf-xml-map.c: Cast changes.
+	* backend/file/qsf-xml.c: Casts 
+	* configure.in: Tweak to library version
+	* qof/gnc-date.c: tweak
+	* qof/gnc-date.h: Remove todo marker
+	* qof/qofbook-p.h: Move qof_book_mark_saved.
+	* qof/qofbook.h: Making qof_book_mark_saved public.
+	* qof/qofquery.h: Adding choice
+	* qof/qofquerycore-p.h: Choice
+	* qof/qofquerycore.c: Choice queries
+	* qof/qofquerycore.h: Choice predicate definition.
+	* qof/test/test-book-merge.c: Removing Guile.
+	* qof/test/test-engine-stuff.c: small cast change.
+
 2005-07-24  Neil Williams <linux@codehelp.co.uk>
 
 	* backend/file/pilot-qsf-GnuCashInvoice.xml: Using real
